# lldb-perf-test

./: .gitignore  .temp  README.md  agent.md  artifacts.md  pyproject.toml  solution.md
.files/: llama-bench
llama_bench/: __init__.py  bench_app.py  cli.py  config.py  explorer.py  gpu.py  hw_monitor.py  logging_setup.py  menu_app.py  metrics.py  orchestrator.py  presets.py  prompts.py  report.py  runner.py  scoring.py  search.py  tui.py  tuner.py
path/to/: llama-bench.py
profiles/: reverse_engineering.yaml
tests/: test_config.py  test_device_selection.py  test_explorer.py  test_logging.py  test_metrics.py  test_new_features.py  test_orchestrator.py  test_presets.py  test_prompts.py  test_runner.py  test_scoring.py  test_search.py  test_tuner.py
tests/fixtures/: llama_server_version.txt
